// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalContainer> passes props to DeleteJobModal 1`] = `
<Connect(UnconnectedDeleteJobModal)
  id="id"
/>
`;

exports[`<ModalContainer> passes props to RunJobModal 1`] = `
<Connect(UnconnectedRunJobModal)
  id="id"
/>
`;

exports[`<ModalContainer> renders DeleteJobModal when requested 1`] = `<Connect(UnconnectedDeleteJobModal) />`;

exports[`<ModalContainer> renders RunJobModal when requested 1`] = `<Connect(UnconnectedRunJobModal) />`;

exports[`<ModalContainer> renders nothing when type is null 1`] = `""`;
